@@ -114,6 +114,10 @@
      [openbsd-compat/sys-queue.h]
      Partly backout. NOLIST, used in LISTs is probably interfering.
      requested by deraadt@
+   - otto@cvs.openbsd.org 2005/10/25 06:37:47
+     [openbsd-compat/sys-queue.h]
+     Some uvm problem is being exposed with the more strict macros.
+     Revert until we've found out what's causing the panics.
  - (djm) [regress/sftp-cmds.sh]
    Use more restrictive glob to pick up test files from /bin - some platforms
    ship broken symlinks there which could spoil the test.
@@ -3390,4 +3394,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4789 2007/10/26 06:43:22 djm Exp $
+$Id: ChangeLog,v 1.4790 2007/10/26 06:44:27 djm Exp $
